5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1679_1103.log
== TEST (2019-04-30 17:12:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira um valor "))
a = float(input("insira um valor a "))
b = float(input("insira um valor b "))

if(b>a):
	if(a<=x and b<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a,"e", b "invalidas")
		

-- ERROR:
File "XXXX", line 14
    print("Entradas", a,"e", b "invalidas")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira um valor "))
a = float(input("insira um valor a "))
b = float(input("insira um valor b "))

if(b>a):
	if(a<=x and b<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a,"e", b "invalidas")
-- ERROR:
File "XXXX", line 14
    print("Entradas", a,"e", b "invalidas")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:13:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira um valor "))
a = float(input("insira um valor a "))
b = float(input("insira um valor b "))

if(b>a):
	if(a<=x and b<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a,"e", b, "invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:13:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira um valor "))
a = float(input("insira um valor a "))
b = float(input("insira um valor b "))

if(b>a):
	if(a<=x and b<=b):
		print(x, "pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a, ",", b)
else:
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.198618
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
